--- a/main.css
+++ b/main.css
@@ -1,10 +1,15 @@
 body {
       background-color: #a966c1;
-
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto;
 }
-
 
 h1 {
     text-align: center;
     font-size: 50;
+}
+
+h3 {
+  text-indent: 30px;
 }
