--- a/main.css
+++ b/main.css
@@ -1,15 +1,33 @@
 body {
-      background-color: #a966c1;
+      background: -webkit-linear-gradient(left, #C390D4, pink, lightblue);
       max-width: 700px;
       margin-left: auto;
       margin-right: auto;
+      font-family: century;
 }
 
 h1 {
     text-align: center;
     font-size: 50;
+    font-family: century;
 }
 
 h3 {
   text-indent: 30px;
+}
+
+p {
+  font-family: century;
+}
+
+ol {
+  font-family: century;
+}
+
+ul {
+  font-family: century;
+}
+
+li {
+  font-family: century;
 }
